<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ope_query"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/query_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_instruction" />

    <LinearLayout
        android:id="@+id/operation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lecture_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lecturer"
                        android:textAlignment="viewStart"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <EditText
                        android:id="@+id/editLecturer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/lecturer_name"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColorHint="#565656" />

                </LinearLayout>

                <Button
                    android:id="@+id/LecQuery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/teal_700"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/query"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold|italic"
                    app:cornerRadius="17dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/student_query"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coursera"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:id="@+id/editCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/course_placeholder"
                    android:importantForAutofill="no"
                    android:inputType="textShortMessage|textCapSentences|textCapWords"
                    android:textColorHint="#565656"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/session"
                    android:textColorHint="#565656"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:id="@+id/editSession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/session_placeholder"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="#565656"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/StuQuery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/teal_700"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/query"
                android:textStyle="bold|italic"
                app:cornerRadius="17dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/teal_700"
            android:gravity="center"
            android:text="@string/button_full"
            android:textStyle="bold|italic"
            app:cornerRadius="17dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/output_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frecycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>